2009.Feb.28 
        Text drawing - as all of this is handled by functions within SDL_extras,
        there isn't any need for code elsewhere in the program to have to know 
        about TTF fonts - changed BlackOutline() to take int size parameter instead
        of a TTF_Font* parameter. With a little more work we can confine all mention
        of SDL_Pango/SDL_ttf to within SDL_extras. When this is done, we will not
        have any dependencies on specific fonts (or need to bundle them) whenever
        SDL_Pango is available.

	David Bruce <davidstuartbruce@gmail.com>

2009.Feb.28 
        Build - added tuxmath.spec.in and tuxmath_preview.spec.in, which
        are processed by configure to give the corresponding specfiles.
        tuxmath.spec is for rpm packaging of official releases.  tuxmath_preview.spec
        generates rpm packages with "tuxmath_preview" as the title, but otherwise
        identical.

	David Bruce <davidstuartbruce@gmail.com>

2009.Feb.17 (svn.debian.org/tux4kids - revision 892)
        Fix convert_utf filename in CMake build. Eliminate the last few
	warnings (David got almost all of them), so now tuxmath builds
	without any compiler warnings.

	Tim Holy <holy@wustl.edu>

2009.Feb.15 (svn.debian.org/tux4kids - revision 889)
        build - moved linebreak-related code back to /linebreak, adjusted 
        autotools files. The code in /linebreak is now built as a static 
        library when using the autotools build.

	David Bruce <davidstuartbruce@gmail.com>

2009.Feb.09 (svn.debian.org/tux4kids - revision 876)
        i18n - modified credits text slightly (replaced empty line
        strings "" with " ") because otherwise the wrapping text truncates
        the credits at the first blank line.

	David Bruce <davidstuartbruce@gmail.com>

2009.Feb.06 (svn.debian.org/tux4kids - revision 873)
        Put two more strings in highscore.c under the domain of gettext.

	Tim Holy <holy@wustl.edu>

