@@ -262,7 +262,6 @@ int write_pregame_summary(void);
 int write_postgame_summary(void);
 
 int load_image_data();
-int load_default_font();
 
 
 #ifndef NOSOUND
